# WhisperLive

./: example.py  pyproject.toml
whisper_live/: client.py  server.py  transcriber.py
